# flirDriver

./: CMakeLists.txt  README.md
QuickSpinAPI/include/: TransportLayerDefs.h  TransportLayerDevice.h  TransportLayerStream.h
QuickSpinAPI/include/spinc/: TransportLayerDefsC.h  TransportLayerDeviceC.h  TransportLayerStreamC.h
QuickSpinAPI/lib/: libSpinUpdate.so.3  libSpinUpdate.so.3.0.0.118  libSpinVideo.so.3  libSpinVideo_C.so.3  libSpinVideo_C.so.3.0.0.118  libSpinnaker.so.3  libSpinnaker_C.so.3  libSpinnaker_C.so.3.0.0.118
QuickSpinAPI/lib/flir-gentl/: FLIR_GenTL.cti
